test/spec_vectors/simd_f64x2_arith/ok/module_1.wat
(module (func (export "f64x2_add_arith") (result v128) (f64x2.add (v128.const f64x2 nan:2251799813685248 1.0) (v128.const f64x2 nan 1.0))) (func (export "f64x2_div_mixed") (result v128) (f64x2.div (v128.const f64x2 nan 1.0) (v128.const f64x2 2.0 nan:2251799813685248))) (func (export "f64x2_mul_mixed") (result v128) (f64x2.mul (v128.const f64x2 nan:2251799813685248 1.0) (v128.const f64x2 2.0 nan))) (func (export "f64x2_neg_canon") (result v128) (f64x2.neg (v128.const f64x2 nan 1.0))) (func (export "f64x2_sqrt_canon") (result v128) (f64x2.sqrt (v128.const f64x2 4.0 -nan))) (func (export "f64x2_sub_arith") (result v128) (f64x2.sub (v128.const f64x2 1.0 -1.0) (v128.const f64x2 -nan 1.0))))