test/spec_vectors/simd_f64x2_arith/fail/module_10.wat
(module (func $f64x2.add-1st-arg-empty (result v128) (f64x2.add (v128.const f64x2 0 0))))